k8s/01-namespace-sa.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: eks-lab
