k8s/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-s3-svc
  namespace: eks-lab
spec:
  selector:
    app: nginx-s3
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
